# videomatico

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/agents/: __init__.py  assembler.py  creative.py  media.py
app/core/: graph.py
app/models/: state.py
app/services/: pro_engine.py  video_engine.py
app/static/: index.html
app/utils/: cleanup.py
assets/: metadata.json
